# DB

./: .gitignore  README.md  pyproject.toml  requirements.txt
htmlcov/: .gitignore  class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_config_py.html  z_145eef247bfb46b6_db_manager_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_db_manager_py.html
src/: config.py  db.py  db_manager.py  hh_api.py  main.py
tests/: test_db_manager.py
