[tool.poetry]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = ["Fish3r228 <zayarobert30@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
